made changes including flask bcrypt and changed the form password to hashedpassword

--- a/templates/login_signup.html
+++ b/templates/login_signup.html
@@ -12,8 +12,8 @@
             <form action="/process_form" method="post">
                 <label for="username">Username:</label>
                 <input type="text" id="username" name="username" required><br><br>                
-                <label for="password">Password:</label>
-                <input type="password" id="password" name="password" required><br><br>
+                <label for="hashed_password">Password:</label>
+                <input type="hashed_password" id="hashed_password" name="hashed_password" required><br><br>
                 <input type="submit" value="Sign Up" name="action">
                 <input type="submit" value="Login" name="action">
             </form>
