--- a/templates/user_profile.html
+++ b/templates/user_profile.html
@@ -40,7 +40,7 @@
                     </div>
                     <div class="col-md-4">
                       <label for="inputPassword4" class="form-label">Password</label>
-                      <input type="password" class="form-control" id="inputPassword4">
+                      <input type="hashed_password" class="form-control" id="inputPassword4">
                     </div>
                     <div class="col-md-4">
                       <label for="newPassword" class="form-label">New Password</label>
