added functioning pagination to the course directory

--- a/static/css/course_directory.css
+++ b/static/css/course_directory.css
@@ -65,3 +65,8 @@ section {
 .pagination-container a {
     color: #005035;
 }
+
+.pagination-container .page-item.active .page-link {
+    background-color: #005035;
+    color: #FFFFFF;
+}
