just a name change

--- a/templates/user_profile.html
+++ b/templates/user_profile.html
@@ -11,7 +11,7 @@
 <body>
     <div class="header">
         <div class="side-nav">
-            <h2>Profile</h2>
+            <h2>CourseElector</h2>
             <ul class="nav-links">
                 <li><a href="#"><i class="fa-brands fa-microsoft" style="color: #ffffff;"></i>Dashboard</a></li>
                 <li><a href="#"><i class="fa-solid fa-gear" style="color: #ffffff;"></i>Settings</a></li>
