--- a/templates/course_directory.html
+++ b/templates/course_directory.html
@@ -45,7 +45,7 @@
             </td>
             <td>
               <form action="/view_forum_posts" method="post">
-                <button type="submit" name="view_posts" value="#" style="background-color: #005035;" class="btn btn-primary">View Thread</button>
+                <button type="submit" name="view_posts" value="#" style="background-color: #005035;" class="btn btn-primary">View Page</button>
               </form>
             </td>
           </tr>
