--- a/templates/submit_rating.html
+++ b/templates/submit_rating.html
@@ -27,7 +27,7 @@
                         <div class="input-container course-container">
                             <select class="form-select" id="course" name="course" required>
                                 {% for course in courses %}
-                                <option value="{{course.course_id}}">{{course.course_letter}} {{course.course_number}} - {{course.title}}</option>
+                                <option value="{{course.course_id}}">{{course.course_letter}}-{{course.course_number}} - {{course.title}}</option>
                                 {% endfor %}
                             </select>
                         </div>
@@ -125,7 +125,8 @@
 
 
 </div>
-<input type="submit" id="submit-btn" form="rating-form" class="btn btn-success mt-3" value="Submit">
+<input type="submit" id="submit-btn" form="rating-form" class="btn btn-success mt-3" value="Submit"{% if disabled %} disabled=True{% endif %}>
+{% if disabled %}<p class="disabled-error">You must be logged in to submit a rating.</p>{% endif %}
 
 {% endif %}
 {% endblock %}
