saving work temporarily

--- a/templates/submit_rating.html
+++ b/templates/submit_rating.html
@@ -74,6 +74,7 @@
                     <td>
                         <div class="input-container single-input-container">
                             <select class="form-select" id="grade" name="grade">
+                                <option value="none"></option>
                                 <option value="A">A</option>
                                 <option value="B">B</option>
                                 <option value="C">C</option>
