minor fixes with form defaults and how null grade/descriptions were handled

--- a/templates/submit_rating.html
+++ b/templates/submit_rating.html
@@ -91,7 +91,7 @@
                     </td>
                     <td>
                         <div class="input-container single-input-container">
-                            <textarea class="form-control" id="description" name="description" placeholder="test"></textarea>
+                            <textarea class="form-control" id="description" name="description"></textarea>
                         </div>
                     </td>
                 </tr>
