--- a/static/css/view_ratings.css
+++ b/static/css/view_ratings.css
@@ -81,7 +81,7 @@ h1 {
     display: flex;
     flex-direction: column;
     width: 450px;
-    min-height: 250px;
+    /* min-height: 250px; */
     background-color: var(--light-green);
     margin: 15px;
     border-radius: 1.5rem;
@@ -109,6 +109,7 @@ h1 {
 .rating-description {
     margin-top: 5px;
     color: var(--dark-green);
+    word-wrap: break-word;
 }
 
 .rating-info-header {
