rework of the login ui design

--- a/templates/index.html
+++ b/templates/index.html
@@ -18,15 +18,15 @@
 <div class="image-columns">
   <div class="column">
       <img src="{{ url_for('static', filename='images/discover_classes.png') }}" alt="Discovering Image">
-      <a href="#">Discover Classes</a>
+      <p>Discover Classes</p>
   </div>
   <div class="column">
       <img src="{{ url_for('static', filename='images/planning.png') }}" alt="Planning Image">
-      <a href="#">Easier Planning &amp; Scheduling </a>
+      <p>Easier Planning &amp; Scheduling </p>
   </div>
   <div class="column">
       <img src="{{ url_for('static', filename='images/rate.png') }}" alt="Rate Image">
-      <a href="#">Rate and Review</a>
+      <p>Rate and Review</p>
   </div>
 </div>
 
