--- a/templates/edit_forum_comment.html
+++ b/templates/edit_forum_comment.html
@@ -9,7 +9,12 @@
             <textarea class="form-control" id="body" name="body" rows="5" required>{{ comment.body }}</textarea>
         </div>
         <br>
-        <button type="submit" class="btn btn-primary">Save Changes</button>
+        {% if disabled %}<p class="text-danger">Don't be sneaky. You must be logged in to edit your own comments.</p>{% endif %}
+        {% if disabled %}
+            <button type="submit" class="btn btn-success disabled">Save Changes</button>
+        {% else %}
+            <button type="submit" class="btn btn-success">Save Changes</button>
+        {% endif %}
     </form>
 </div>
 {% endblock %}
