--- a/templates/edit_forum_post.html
+++ b/templates/edit_forum_post.html
@@ -20,7 +20,12 @@
           {% endfor %}
         </select>
       </div>
-      <button type="submit" class="btn btn-primary">Save Changes</button>
+      {% if disabled %}<p class="text-danger">Don't be sneaky. You must be logged in to edit your own posts.</p>{% endif %}
+      {% if disabled %}
+        <button type="submit" class="btn btn-success disabled">Save Changes</button>
+      {% else %}
+        <button type="submit" class="btn btn-success">Save Changes</button>
+      {% endif %}
     </form>
 </div>
 {% endblock %}
