--- a/templates/view_single_forum_post.html
+++ b/templates/view_single_forum_post.html
@@ -1,29 +1,44 @@
+
 {% extends '_layout.html' %}
 {% block body %}
+
 <div class = "container pt-4">
     <h1>{{ post.subject }}</h1>
+    <p class="text-success">Post by {{ poster_username }}</p>
     <p>{{ post.body }}</p>
-    <a href="{{ url_for('edit_forum_post', post_id=post.post_id) }}" class="btn btn-primary">Edit Post</a>
-    
+    {% if 'username' in session and post.author.username == session['username'] %}
+      <a href="{{ url_for('edit_forum_post', post_id=post.post_id) }}" class="btn btn-success">Edit Post</a>
+    {% endif %}
+
     <h2>Comments</h2>
     <ul class="list-group mt-3">
-        {% for comment in post.comments %}
-        <li class="list-group-item">
-            {{ comment.body }}
-            <form method="post" action="{{ url_for('delete_comment', post_id=post.post_id, comment_id=comment.comment_id) }}">
-            <button type="submit" class="btn btn-danger btn-sm float-right">Delete</button>
-            </form>
-            <a href="{{ url_for('edit_forum_comment', post_id=post.post_id, comment_id=comment.comment_id) }}" class="btn btn-primary btn-sm float-right mr-2">Edit</a>
-        </li>
-        {% endfor %}
-    </ul>
+      {% for comment in post.comments %}
+      <li class="list-group-item">
+          <p class="text-success">Comment by {{ comment_usernames[loop.index0] }}</p>
+          {{ comment.body }}
+          <br>
+          {% if 'username' in session and comment.author.username == session['username'] %}
+              <a href="{{ url_for('edit_forum_comment', post_id=post.post_id, comment_id=comment.comment_id) }}" class="btn btn-success btn-sm float-right mr-2">Edit</a>
+              <form method="post" action="{{ url_for('delete_comment', post_id=post.post_id, comment_id=comment.comment_id) }}">
+                  <button type="submit" class="btn btn-danger btn-sm float-right">Delete</button>
+              </form>
+          {% endif %}
+      </li>
+      {% endfor %}
+  </ul>
     <form method="post" action="{{ url_for('create_forum_comment', post_id=post.post_id) }}">
         <div class="form-group">
           <label for="comment-body">Add a Comment:</label>
           <textarea class="form-control" id="comment-body" name="body" rows="3" required></textarea>
         </div>
         <br>
-        <button type="submit" class="btn btn-primary">Add Comment</button>
+        
+        {% if disabled %}<p class="text-danger">You must be logged in to add a comment.</p>{% endif %}
+        {% if disabled %}
+          <button type="submit" class="btn btn-success disabled">Add Comment</button>
+        {% else %}
+          <button type="submit" class="btn btn-success">Add Comment</button>
+        {% endif %}
       </form>
     <a href="{{ url_for('view_forum_posts') }}" class="btn btn-secondary mt-2">Back to Forum Home</a>
 </div>
