view ratings tests + some other fixes

--- a/templates/view_ratings.html
+++ b/templates/view_ratings.html
@@ -7,7 +7,7 @@
 {% endblock %}
 
 {% block body %}
-<h1 class="text-center">{{course.course_number}}-{{course.course_letter}} - {{course.title}}</h1>
+<h1 class="text-center">{{course.course_letter}}-{{course.course_number}} - {{course.title}}</h1>
 
 
 <div class="course-info-container">
