fixed some of the e2e test cases still needs debugging. Still need to create the unit test cases

--- a/templates/login_signup.html
+++ b/templates/login_signup.html
@@ -38,7 +38,7 @@
                 <p>Sign Up and discover reviews of courses in your school</p>
             </div>
             <div class="img-text m-in">
-                <h2>Already Have an Account</h2>
+                <h2>Already Have an Account?</h2>
                 <p>Just Login</p>
             </div>
             <div class="img-btn">
