--- a/templates/_layout.html
+++ b/templates/_layout.html
@@ -7,9 +7,8 @@
     <title>{% block title %}{% endblock %}</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
-    {% block styles %}
-        <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css" rel="stylesheet">
-    {% endblock %}
+    {% block styles %}{% endblock %}
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css" rel="stylesheet">
     <script defer src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
         crossorigin="anonymous"></script>
@@ -49,18 +48,13 @@
                         <a class="nav-link">You are currently logged in as: {{username}}</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="/user_profile">My Profile</a>
+                        <a class="nav-link" href="/user_profile"><i class="fa-regular fa-user" style="color: #ffffff;"></i></a>
                     </li>
                     {% else %}
                     <li class="nav-item">
                         <a class="nav-link{% if login_active %} active{% endif %}" href="/login_signup">Log In or Sign up</a>
                     </li>
                     {% endif %}
-                </ul>
-                <ul class="navbar-nav ml-auto mb-2 mb-lg-0">
-                    <li class="nav-item">
-                        <a class="nav-link" href="/user_profile"><i class="fa-regular fa-user" style="color: #ffffff;"></i>Profile</a>
-                    </li>
                 </ul>
             </div>
         </div>
