--- a/templates/user_profile.html
+++ b/templates/user_profile.html
@@ -34,7 +34,7 @@
                 </div>
             </div>
             <div class="profile-form">
-                <form class="row g-3" method="POST" action="{{url_for('update_profile')}}">
+                <form class="row g-3" method="{{ method }}" action="{{url_for('update_profile')}}">
                     <div class="col-md-4">
                       <label for="username" class="form-label">Username</label>
                       <input type="username" class="form-control" id="username" value="{{ username }}" readonly>
