pushing app.py changes that didn't get pushed at first

--- a/templates/view_forum_posts.html
+++ b/templates/view_forum_posts.html
@@ -1,5 +1,5 @@
 {% extends '_layout.html' %}
-
+{% block title %}CourseElector Forum Home{% endblock %}
 
 {% block body %}
 <div class="container pt-4">
