--- a/templates/view_single_forum_post.html
+++ b/templates/view_single_forum_post.html
@@ -1,5 +1,6 @@
 
 {% extends '_layout.html' %}
+{% block title %}View a Forum Post{% endblock %}
 {% block body %}
 
 <div class = "container pt-4">
