still trying to fix e2e test cases

--- a/templates/user_profile.html
+++ b/templates/user_profile.html
@@ -55,7 +55,7 @@
                       <button type="submit" class="btn btn-secondary">Update Profile</button>
                     </div>
                 </form><br>
-                <form method="post" action="/delete_user" id="delete_form">
+                <form action="/delete_user" method="post" id="delete_form">
                   <button type="submit" class="btn btn-danger">Delete Account</button>
                 </form>
                 {% with messages = get_flashed_messages() %}
