--- a/templates/submit_rating.html
+++ b/templates/submit_rating.html
@@ -1,6 +1,6 @@
 {% extends '_layout.html' %}
 
-{% block title %}Course Elector | Submit Rating{% endblock %}
+{% block title %}Submit Rating{% endblock %}
 
 {% block styles %}
 <link href="{{url_for('static', filename='css/submit_rating.css')}}" rel="stylesheet">
