--- a/templates/view_ratings.html
+++ b/templates/view_ratings.html
@@ -1,6 +1,6 @@
 {% extends '_layout.html' %}
 
-{% block title %}Course Elector | View Ratings{% endblock %}
+{% block title %}View Ratings - {{course.course_letter}}-{{course.course_number}}{% endblock %}
 
 {% block styles %}
 <link href="{{url_for('static', filename='css/view_ratings.css')}}" rel="stylesheet">
